# serial2midi

./: CMakeLists.txt  README.md  serial2midi.cpp
include/: Midi.hpp  Serial.hpp
